--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Burntbay Capital</h1>
-    <p>We invest in disruptive early-stage companies and novel liquid markets.</p>
+    <p>Investing in disruption -— early-stage companies and frontier liquid markets.</p>
     <p></p>
 
-    <p><a href="mailto:info@burntbay.capital">info@burntbay.capital</a></p>
+    <p><a href="mailto:contact@burntbay.capital">contact@burntbay.capital</a></p>
 </body>
 </html>
