--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burntbay Capital</title>
-</head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>
+      <img src="Group 35198.svg" alt="Burnt Bay Capital Logo" class="logo" />
+  </title>
 <body>
-    <h1>Burntbay Capital</h1>
-    <p>Investing in disruption -— early-stage companies and frontier liquid markets.</p>
-    <p></p>
-
-    <p><a href="mailto:contact@burntbay.capital">contact@burntbay.capital</a></p>
+    <h1>We invest in asymmetric opportunities across frontier liquid markets and early-stage private ventures.</h1>
+      <p>Contact us at <a href="mailto:info@burntbay.capital">info@burntbay.capital</a></p>
 </body>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      background-color: #fdfdfd;
+      color: #111;
+      text-align: center;
+      padding: 80px 20px;
+      margin: 0;
+    }
+
+    img.logo {
+      width: 120px;
+      height: auto;
+      margin-bottom: 40px;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin: 0 0 20px;
+    }
+
+    p {
+      font-size: 1em;
+      margin: 10px 0;
+    }
+
+    a {
+      color: #111;
+      text-decoration: underline;
+    }
+
+    a:hover {
+      color: #444;
+    }
+  </style>
+</head>
 </html>
