--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>
-      <img src="Group 35198.svg" alt="Burnt Bay Capital Logo" class="logo" />
-  </title>
-<body>
-    <h1>We invest in asymmetric opportunities across frontier liquid markets and early-stage private ventures.</h1>
-      <p>Contact us at <a href="mailto:info@burntbay.capital">info@burntbay.capital</a></p>
-</body>
+  <title>Burntbay Capital</title>
   <style>
     body {
       font-family: Georgia, serif;
       background-color: #fdfdfd;
       color: #111;
-      text-align: center;
-      padding: 80px 20px;
+      text-align: left;
+      padding: 80px 40px;
       margin: 0;
     }
 
@@ -27,7 +21,8 @@
     }
 
     h1 {
-      font-size: 2em;
+      font-size: 1.6em;
+      font-weight: normal;
       margin: 0 0 20px;
     }
 
@@ -44,6 +39,24 @@
     a:hover {
       color: #444;
     }
+
+    .line {
+      border-top: 1px solid #ccc;
+      margin: 60px 0 10px;
+      width: 40%;
+    }
+
+    .footer {
+      font-size: 0.85em;
+      color: #666;
+    }
   </style>
 </head>
+<body>
+  <img src="Group 35198.svg" alt="Burntbay Capital Logo" class="logo" />
+  <h1>We invest in asymmetric opportunities across frontier liquid markets and early-stage private ventures.</h1>
+  <p>Contact us at <a href="mailto:info@burntbay.capital">info@burntbay.capital</a></p>
+  <div class="line"></div>
+  <div class="footer">Burntbay Capital</div>
+</body>
 </html>
