--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Burntbay Capital</title>
+  <link rel="icon" href="hvdsj.svg" type="image/svg+xml" />
   <style>
     body {
       font-family: Georgia, serif;
@@ -15,7 +16,7 @@
     }
 
     img.logo {
-      width: 120px;
+      width: 180px;
       height: auto;
       margin-bottom: 40px;
     }
