--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Burntbay Capital</title>
-  <link rel="icon" href="hvdsj.svg" type="image/svg+xml" />
+  <link rel="icon" href="Group 35199.svg" type="image/svg+xml" />
   <style>
     body {
       font-family: Georgia, serif;
