--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Burntbay Capital</title>
-<!-- Dark mode favicon -->
-<link rel="icon" href="Group 35199.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)" />
-
-<!-- Light mode favicon -->
-<link rel="icon" href="hvdsj.svg" type="image/svg+xml" media="(prefers-color-scheme: light)" />
-
-<!-- Fallback favicon for browsers that don't support media queries -->
-<link rel="icon" href="hvdsj.svg" type="image/svg+xml" />
-
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <style>
     body {
       font-family: Georgia, serif;
